# ModelSafetyMCP

./: .gitignore  Dockerfile  LICENSE  README.md  cursor-run-model-safety.cmd  cursor.mcp.example.json  pyproject.toml  run_server.py  server.json
src/model_safety_mcp/: __init__.py  __main__.py  scanners.py  server.py
