[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-safety-mcp"
version = "0.1.0"
description = "An MCP server for model artifact safety scanning."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "h5py>=3.16.0",
  "mcp>=1.26.0",
  "modelscan>=0.8.8",
  "picklescan>=1.0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
model-safety-mcp = "model_safety_mcp.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
